--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
 
   <!-- CSS Stylesheet -->
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
